# unity-named-pipes

./: CMakeLists.txt
NativeTest/: CMakeLists.txt  main.cpp
Unity Package/Assets/NamedPipeClient/IO/: NamedPipeClientStream.cs
UnityNamedPipe.Native/: CMakeLists.txt  NativeNamedPipe.cpp  NativeNamedPipe.h  connection.h  connection_unix.cpp  connection_win.cpp
UnityNamedPipe/IO/: NamedPipeClientStream.cs
